...
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="API"/>
                                <connections>
                                    <segue destination="sqd-2f-DZk" kind="showDetail" id="AWX-vf-QFh"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home Screen" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D49-SA-iNa">
                                <rect key="frame" x="23" y="62" width="140.66666666666666" height="27"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="23"/>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <color key="highlightedColor" name="AccentColor"/>
                            </label>
                        </subviews>
...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="402" height="874"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l2X-mH-l9t">
                                <rect key="frame" x="40" y="146" width="322" height="27"/>
                                <accessibility key="accessibilityConfiguration" identifier="signInLabelId"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="23"/>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <color key="highlightedColor" name="AccentColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YjL-sC-9Ws">
                                <rect key="frame" x="40" y="353" width="322" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordTextFieldId" label="Please enter email"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="eCQ-gX-T6d"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dT5-3a-Glz">
                                <rect key="frame" x="40" y="293" width="322" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="emailTextFieldId" label="Please enter email"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="A9R-mS-mOF"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                            </textField>
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="1" id="ABz-OO-Yx3"/>
                                </constraints>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VfG-xz-Paz">
                                <rect key="frame" x="40" y="427" width="322" height="41"/>
                                <accessibility key="accessibilityConfiguration" identifier="signInBtnId"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="41" id="WNb-3T-th1"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Sign In" cornerStyle="capsule">
                                    <color key="baseBackgroundColor" red="0.83396423969072164" green="0.46984096643782897" blue="0.32959421030426761" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
